--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -16,7 +16,7 @@
                 <form (ngSubmit)="addToCart()">
                     <mat-form-field appearance="fill">
                         <mat-label>Quantity</mat-label>
-                        <mat-select [(ngModel)]="quantity" name="{{product.id}}">
+                        <mat-select [(ngModel)]="quantity" name="{{product.id}}" (ngModelChange)="update()">
                         <mat-option *ngFor="let i of [1,2,3,4,5,6,7,8,9,10]" [value]="i">{{i}}</mat-option>
                         </mat-select>
                     </mat-form-field>
